@@ -1,0 +1,26 @@
+<?xml version="1.0" encoding="utf-8" ?>
+
+<oaf_info>
+	<oaf_server iid="OAFIID:GNOME_RevelationApplet_Factory" type="exe" location="@libexecdir@/revelation-applet">
+		<oaf_attribute name="repo_ids" type="stringv">
+			<item value="IDL:Bonobo/GenericFactory:1.0" />
+			<item value="IDL:Bonobo/Unknown:1.0" />
+		</oaf_attribute>
+
+		<oaf_attribute name="name" type="string" value="Revelation Account Lookup" />
+		<oaf_attribute name="description" type="string" value="Gives access to a Revelation account database" />
+	</oaf_server>
+
+	<oaf_server iid="OAFIID:GNOME_RevelationApplet" type="factory" location="OAFIID:GNOME_RevelationApplet_Factory">
+		<oaf_attribute name="repo_ids" type="stringv">
+			<item value="IDL:GNOME/Vertigo/PanelAppletShell:1.0" />
+			<item value="IDL:Bonobo/Control:1.0" />
+			<item value="IDL:Bonobo/Unknown:1.0" />
+		</oaf_attribute>
+
+		<oaf_attribute name="name" type="string" value="Revelation Account Lookup" />
+		<oaf_attribute name="description" type="string" value="Gives access to a Revelation account database" />
+		<oaf_attribute name="panel:category" type="string" value="Utility" />
+		<oaf_attribute name="panel:icon" type="string" value="revelation.png" />
+	</oaf_server>
+</oaf_info>
