@@ -7,11 +7,17 @@
 
 SUBDIRS		= lib
 bin_SCRIPTS	= revelation
-CLEANFILES	= revelation
+libexec_SCRIPTS	= revelation-applet
+CLEANFILES	= revelation revelation-applet
 
 
 revelation: revelation.in
 	sed \
 		-e "s|\@pythondir\@|$(pythondir)|" \
 		revelation.in > revelation
+
+revelation-applet: revelation-applet.in
+	sed \
+		-e "s|\@pythondir\@|$(pythondir)|" \
+		revelation-applet.in > revelation-applet
 
