@@ -1,0 +1,80 @@
+#!/usr/bin/env python
+
+#
+# Revelation 0.4.3 - a password manager for GNOME 2
+# http://oss.codepoet.no/revelation/
+# $Id$
+#
+# Applet for account lookup
+#
+#
+# Copyright (c) 2003-2005 Erik Grinaker
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+#
+
+import gnome, gnome.applet, gtk, sys
+
+if "@pythondir@" not in sys.path:
+	sys.path.insert(0, "@pythondir@")
+
+from revelation import config
+
+
+class RevelationApplet(object):
+	"Revelation applet"
+
+	def __init__(self, applet, iid):
+		self.applet	= applet
+		self.iid	= iid
+
+		menuxml = """
+<popup name="button3">
+	<menuitem name="prefs"	verb="prefs"	label="Preferences"	pixtype="stock"	pixname="gtk-properties" />
+	<menuitem name="kill"	verb="kill"	label="Kill"		pixtype="stock"	pixname="gtk-quit" />
+	<menuitem name="about"	verb="about"	label="About"		pixtype="stock"	pixname="gnome-stock-about" />
+</popup>
+"""
+
+		self.applet.setup_menu(menuxml (
+			( "about",	lambda w,d=None: True ),
+			( "kill",	lambda w,d=None: sys.exit() ),
+			( "prefs",	lambda w,d=None: True )
+		), None)
+
+		label = gtk.Label("Revelation applet")
+		self.applet.add(label)
+
+
+
+def factory(applet, iid):
+	"Applet factory function"
+
+	RevelationApplet(applet, iid)
+	applet.show_all()
+
+	return True
+
+
+
+if __name__ == "__main__":
+	gnome.init(config.APPNAME, config.VERSION)
+
+	gnome.applet.bonobo_factory(
+		"OAFIID:GNOME_RevelationApplet_Factory",
+		gnome.applet.Applet.__gtype__,
+		config.APPNAME, config.VERSION, factory
+	)
+
